hide table if no entries

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -12,7 +12,7 @@
 
 <hr>
 
-<div class="row row-bottom-spacing">
+<div ng-show="occasions.length" class="row row-bottom-spacing">
   <div class="col-md-12">
     <h2>My Countdowns</h2>
   </div>
@@ -24,7 +24,7 @@
   </div>
 </div>
 
-<div class="row row-bottom-spacing">
+<div ng-show="occasions.length" class="row row-bottom-spacing">
   <div class="col-md-12">
     <table class="table countdowns">
       <tr>
