--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
   <script src="bower_components/moment/moment.js"></script>
   <script src="bower_components/angular-moment/angular-moment.js"></script>
   <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+  <script src="bower_components/ngSmoothScroll/angular-smooth-scroll.min.js"></script>
   <script src="app.js"></script>
   <script src="services.js"></script>
   <script src="view1/view1.js"></script>
