--- a/app/view1/forward-to.html
+++ b/app/view1/forward-to.html
@@ -1,24 +1,28 @@
 <section class="feature-main">
   <article class="vertical-center">
     <h1>What are you looking forward to?</h1>
-    <form name="occasionForm" data-ng-submit="occasionForm.$valid && addOccasion(occasion)" novalidate>
+    <form name="occasionForm" ng-submit="occasionForm.$valid && addOccasion(occasion)" novalidate>
       <div class="field">
-        <input id="occasion-name" ng-model="occasion.name" required type="text" placeholder="I'm looking forward to...">
+        <input id="occasion-name" ng-pattern="/^[a-zA-Z0-9 ]*$/" ng-model="occasion.name" required type="text" placeholder="I'm looking forward to...">
+        <span class="input-error-hint">Hint: You must specify an event using no special characters</span>
       </div>
       <div class="field">
         <input id="occasion-date" ng-model="occasion.date" placeholder="yyyy-mm-dd" required type="date">
+        <span class="input-error-hint">Hint: You must specify a date in the correct format (yyyy-mm-dd)</span>
       </div>
       <button type="submit">Start!</button>
     </form>
   </article>
 </section>
 
-<section class="feature-content">
+<section class="feature-content" id="mycountdowns">
 
   <article>
     <h2>My Countdowns</h2>
 
-    Filter: <input ng-model="query">
+    <div class="filter">
+      Filter: <input type="text" ng-pattern="/^[a-zA-Z0-9 ]*$/" ng-model="query">
+    </div>
 
     <table class="table countdowns">
       <tr>
@@ -40,7 +44,7 @@
           {{ occasion.date | date }}
         </td>
         <td>
-          <span am-time-ago="occasion.date"></span>
+          <span>in {{occasion.date | amDifference : null : 'days'}} days</span>
         </td>
         <td>
           <a class="action-icon" href="#/occasions/{{occasion.id}}"><i class="fa fa-eye"></i></a>
@@ -56,7 +60,7 @@
     </table>
   </article>
   <hr>
-  <article>
+  <article ng-show="(occasions | isAfter).length">
     <h2>My Past Countdowns</h2>
     <table class="table countdowns">
       <tr>
