revert back to angular

--- a/app/index.html
+++ b/app/index.html
@@ -21,12 +21,11 @@
 
   <div class="container" ng-view></div>
 
-  
-  <script src="bower_components/jquery/dist/jquery.js"></script>
-
+  <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-  <!--<script src="bower_components/angular/angular.js"></script>-->
-  
+  -->
+  <script src="bower_components/jquery/dist/jquery.js"></script>
+  <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="bower_components/moment/moment.js"></script>
