--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,6 +1,6 @@
 <section class="feature-full">
   <article class="vertical-center">
-    <h2 data-fittext data-fittext-max="50"><span>{{occasion.date | amDifference : null : 'days'}}</span> days until</h2>
+    <h2 am-time-ago="occasion.date"></h2>
     <div class="clearfix"></div>
     <h1 data-fittext data-fittext-max="250" data-fittext-min="50">{{ occasion.name }}</h1>
     <a class="link-button" href="#/view1">Back to List</a>
